Fix contrast for links in navbar

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ footer a, footer p {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-    color: rgb(173, 219, 238);
+    color: rgb(230, 243, 247);
     text-decoration: none;
 }
 
